# zkkyc-solana

./: .env.example  .gitignore  Anchor.toml  Arcium.toml  README.md  package-lock.json  package.json
artifacts/: circuits_hash.txt
encrypted-ixs/src/: lib.rs
evidence/: P1_node_ops.jsonl  devnet_activity_2026-03-25.json  devnet_activity_2026-03-26.json  devnet_activity_2026-03-27.json  devnet_activity_2026-03-28.json  devnet_activity_2026-03-29.json  devnet_activity_2026-03-30.json  devnet_activity_2026-03-31.json  devnet_activity_2026-04-01.json  devnet_activity_2026-04-02.json  devnet_activity_2026-04-03.json  devnet_activity_2026-04-05.json  devnet_activity_2026-04-07.json  devnet_activity_2026-04-08.json  devnet_activity_2026-04-09.json  devnet_activity_2026-04-10.json  devnet_activity_2026-04-11.json  devnet_activity_2026-04-12.json  devnet_activity_2026-04-13.json  devnet_activity_2026-04-14.json  devnet_activity_2026-04-15.json  devnet_activity_2026-04-16.json  devnet_activity_2026-04-17.json  devnet_activity_2026-04-18.json  devnet_activity_2026-04-19.json  devnet_activity_2026-04-20.json  devnet_activity_2026-04-21.json  devnet_activity_2026-04-22.json  devnet_activity_2026-04-23.json  devnet_activity_2026-04-24.json  devnet_activity_2026-04-25.json  devnet_activity_2026-04-26.json  devnet_activity_2026-04-27.json  mxe_runs.jsonl
programs/zkkyc/: Cargo.toml
programs/zkkyc/src/: lib.rs
scripts/: arcium_interaction.js  init_comp_def.ts  mxe_loop.sh  p0_tx_loop.sh  run_demo.ts
