[package]
name = "zkkyc"
version = "0.1.0"
description = "Privacy-preserving KYC compliance via Arcium MXE"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zkkyc"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
arcium-client = { default-features = false, version = "=0.9.3" }
arcium-macros = "=0.9.3"
arcium-anchor = "=0.9.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
